# gitscover

./: .gitignore  README.md  com.github.linuxhubit.gitscover.yml  meson.build
data/: com.github.linuxhubit.gitscover.appdata.xml.in  com.github.linuxhubit.gitscover.desktop.in  meson.build
debian/: changelog  control  files
po/: com.github.linuxhubit.gitscover.pot  fr.po  it.po  nl.mo  nl.po
po/extra/: POTFILES  extra.pot  fr.po
src/: API.vala  Application.vala  Constants.vala  MainWindow.vala
